model generation can be executed cleanly (e.g. without corrupting svn)

--- a/sys-src/era.foss.model.core/ant.properties
+++ b/sys-src/era.foss.model.core/ant.properties
@@ -6,7 +6,7 @@
 
 # General
 verbose: false
-               
+
 # paths
 path.config: config
 path.model: model
@@ -14,9 +14,8 @@ path.tools: ../era.internal.tools
 
 # ExtendEcore properties
 extendEcore.config: extendEcore.properties
-extendEcore.source: rif.ecore
-extendEcore.target: rif.extended.ecore
+originalEcore.filename: rif.ecore
+extendEcore.filename: rif.extended.ecore
 
 # ExtendGenModel properties
 extendGenModel.config: extendGenModel.properties
-extendGenModel.source: rif.extended.ecore
