ERA-4 Fixed clean and build stucture

--- a/sys-src/era.internal.build/ant.properties
+++ b/sys-src/era.internal.build/ant.properties
@@ -5,7 +5,7 @@
 #
 
 # List of projects to build
-projects: era.internal.tools, era.foss.model.core
+projects: era.internal.tools, era.foss.model.core, era.foss.model.edit, era.foss.model.geneditor
 
 # directory where to build the eclipse site
-dist: site
+site: site
