--- a/sys-src/era.foss.model.edit/.project
+++ b/sys-src/era.foss.model.edit/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>era.foss.model.core</name>
+	<name>era.foss.model.edit</name>
 	<comment></comment>
 	<projects>
 	</projects>
