--- a/sys-src/era.foss.model.core/plugin.properties
+++ b/sys-src/era.foss.model.core/plugin.properties
@@ -4,6 +4,6 @@
 #
 # $Id$
 
-pluginName = era.foss.model Model
-providerName = www.example.org
+pluginName = era.foss.model.core
+providerName = era.foss.model.core
 _UI_Rif_content_type = Rif File
