--- a/sys-src/era.foss.model.core/plugin.xml
+++ b/sys-src/era.foss.model.core/plugin.xml
@@ -9,18 +9,15 @@
 -->
 
 <plugin>
-
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://automotive-his.de/schema/rif"
-            class="era.foss.model.core.model.rif.RifPackage"
+            class="era.foss.model.core.rif.RifPackage"
             genModel="model/rif.extended.genmodel"/>
    </extension>
-
    <extension point="org.eclipse.emf.ecore.extension_parser">
       <parser
             type="rif"
-            class="era.foss.model.core.model.rif.util.RifResourceFactoryImpl"/>
+            class="era.foss.model.core.rif.util.RifResourceFactoryImpl"/>
    </extension>
-
 </plugin>
