+ Created Ecore model from RIF xsd version 1.1a. was version 1.0 ?? + put ecore customization into properties file

--- a/sys-src/era.foss.model.core/config/extendGenModel.properties
+++ b/sys-src/era.foss.model.core/config/extendGenModel.properties
@@ -10,7 +10,7 @@ complianceLevel: 6.0
 contentType: text/rif
 
 # fileExtension: file extension for model files
-fileExtension: rif
+fileExtension: xml
 
 # foreignModel: The file from which the model was originally generated
 foreignModel: rif.xsd
