--- a/sys-src/era.foss.model.core/config/extendEcore.properties
+++ b/sys-src/era.foss.model.core/config/extendEcore.properties
@@ -7,57 +7,57 @@ classname.CHILDRENType1: SpecHierachyhildren
 classname.CHILDRENType1: SpecHierachyRootChildren
 
 # Default value types
-classname.DEFAULTVALUEType: SimpleDefaultValue
-classname.DEFAULTVALUEType1: EnumerationDefaultValue
-classname.DEFAULTVALUEType2: ComplexDefaultValue
+classname.DEFAULTVALUEType: AttributeDefinitionSimpleDefaultValue
+classname.DEFAULTVALUEType1: AttributeDefinitionEnumerationDefaultValue
+classname.DEFAULTVALUEType2: AttributeDefinitionComplexDefaultValue
 
 # Attribute definition types
-classname.DEFINITIONType: XmlDataDefinition
-classname.DEFINITIONType1: FileReferenceDefinition
-classname.DEFINITIONType2: EmbeddedFileDefinition
-classname.DEFINITIONType3: EnumerationDefinition
-classname.DEFINITIONType4: SimpleDefinition
-classname.DEFINITIONType5: EmbeddedDocumentDefinition
+classname.DEFINITIONType: AttributeValueXmlDataDefinition
+classname.DEFINITIONType1: AttributeValueFileReferenceDefinition
+classname.DEFINITIONType2: AttributeValueEmbeddedFileDefinition
+classname.DEFINITIONType3: AttributeValueEnumerationDefinition
+classname.DEFINITIONType4: AttributeValueSimpleDefinition
+classname.DEFINITIONType5: AttributeValueEmbeddedDocumentDefinition
 
 # Relation group types
 classname.RELATIONGROUPSType: SpecGroupRelationGroups
-classname.RELATIONGROUPSType1: AccesspolicyRelationGroups
+classname.RELATIONGROUPSType1: AccessPolicyRelationGroups
 
 # Spec group types
 classname.SPECGROUPSType: SpecGroups
-classname.SPECGROUPSType1: AccesspolicySpecGroups
+classname.SPECGROUPSType1: AccessPolicySpecGroups
 
 # Spec hierachy roots types
 classname.SPECHIERARCHYROOTSType: SpecHierarchyRoots
-classname.SPECHIERARCHYROOTSType1: AccesspolicySpecHierarchyRoots
+classname.SPECHIERARCHYROOTSType1: AccessPolicySpecHierarchyRoots
 
 # Spec objects types
 classname.SPECOBJECTSType: SpecGroupSpecObjects
 classname.SPECOBJECTSType1: SpecObjects
-classname.SPECOBJECTSType2: AccesspolicySpecObjects
+classname.SPECOBJECTSType2: AccessPolicySpecObjects
 
 # Spec relations types
 classname.SPECRELATIONSType: RelationGroupSpecReleations
 classname.SPECRELATIONSType1: SpecReleations
-classname.SPECRELATIONSType2: AccesspolicySpecReleations
+classname.SPECRELATIONSType2: AccessPolicySpecReleations
 
 # Spec types types
 classname.SPECTYPESType: SpecTypes
-classname.SPECTYPESType1: AccesspolicySpecTypes
+classname.SPECTYPESType1: AccessPolicySpecTypes
 
 # Type types
 classname.TYPEType: SpecGroupType
 classname.TYPEType1: SpecHierarchyRootType
-classname.TYPEType2: EnumerationType
-classname.TYPEType3: SimpleType
+classname.TYPEType2: AttributeDefinitionEnumerationType
+classname.TYPEType3: AttributeDefinitionSimpleType
 classname.TYPEType4: SpecObjectType
 classname.TYPEType5: SpecRelationType
-classname.TYPEType6: ComplexType
+classname.TYPEType6: AttributeDefinitionComplexType
 
 # Values types
 classname.VALUESType: SpecHierarchyRootValues
 classname.VALUESType1: SpecGroupValues
 classname.VALUESType2: SpecObjectValues
 classname.VALUESType3: SpecRelationValues
-classname.VALUESType4: EnumerationValues
+classname.VALUESType4: AttributeValueEnumerationValues
 
