--- a/sys-src/era.foss.model.gen/pom.xml
+++ b/sys-src/era.foss.model.gen/pom.xml
@@ -1,15 +1,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>era</groupId>
-  <artifactId>foss.model.gen</artifactId>
+  <artifactId>foss.model.mvngenbase</artifactId>
   <version>0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>ERA FOSS Model Generation</name>
+  <!--
   <properties>
     <cpn.someDemoProp>2.5.6.A</cpn.someDemoProp>
   </properties>
+  -->
   <developers>
     <developer>
       <id>cpn</id>
@@ -21,28 +24,61 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
       http://www6.informatik.uni-erlangen.de/</organizationUrl>
     </developer>
   </developers>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>mapasuta.repo</id>
+      <name>Mapasuta Project Download Repository</name>
+      <url>http://mapasuta.sf.net/maven/repo</url>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>daily</updatePolicy>
+        <checksumPolicy>fail</checksumPolicy>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </pluginRepository>
+  </pluginRepositories>
   <build>
     <plugins>
       <plugin>
         <groupId>net.sf.mapasuta.build.maven.plugins</groupId>
         <artifactId>maven-emfgen-plugin</artifactId>
+        <!-- this newest version will check the Eclipse Version and complain ... <version>1.0.1-SNAPSHOT</version>-->
         <configuration>
           <eclipseDir>/proj.era/progs/eclipse</eclipseDir>
-          <baseName>cpnrifbasename</baseName>
-          <genSrc>src/main/java</genSrc>
-          <genModel>rif.extended.genmodel</genModel>
+          <eclipseVersion>3.4.1</eclipseVersion>
+          <!-- BEGIN INPUT -->
           <metaModels>
-            <metaModel>${basedir}/src/genbase/ecore/rif.extended.ecore</metaModel>
+            <!-- these are INput -->
+            <metaModel>
+            ${basedir}/src/genbase/ecore/rif.extended.ecore</metaModel>
           </metaModels>
           <packageUris>
+            <!-- these must match the ecore-internal namespaces (for multi ecore-files support...!) -->
             <packageUri>
             http://automotive-his.de/schema/rif</packageUri>
           </packageUris>
-          <prefixName>my_model</prefixName>
+          <!-- END INPUT -->
+          <!-- BEGIN OUTPUT -->
+          <!-- the log files from the generator run will be found in this "temporary" Eclipse workspace -->
+          <workspace>
+          ${basedir}/gen-rt/wsp.eclipse4gen</workspace>
+          <!-- this directory represents the resulting Eclipse plug-in -->
+          <outputDirectory>
+          ${basedir}/../era.foss.model.mvngenout</outputDirectory>
+          <!-- The Eclipse project name (CPN says: should equal the outputDirectory -->
+          <modelProject>era.foss.model.mvngenout</modelProject>
+          <!-- the genmodel is generated -->
+          <genSrc>src/main/java</genSrc>
+          <genModel>rif.extended.genmodel</genModel>
+          <!-- END OUTPUT -->
+          <prefixName>rifext</prefixName>
         </configuration>
         <executions>
           <execution>
-            <id>generate-rifmodel-sources</id>
+            <id>generate-ecoremodel-sources</id>
+            <!-- execute with "mvn emfgen:genmode" -->
             <goals>
               <goal>genmodel</goal>
             </goals>
