ERA-4 Fixed core

--- a/sys-src/era.foss.model.core/config/extendGenModel.properties
+++ b/sys-src/era.foss.model.core/config/extendGenModel.properties
@@ -19,10 +19,10 @@ foreignModel: rif.xsd
 #copyright:
 
 # extendsClass: class from which model elements are derived, defaults EObjectImpl
-#extendsClass:
+extendsClass: era.foss.model.core.era.internal.ERAObjectImpl
 
 # extendsInterface: interface from which model elements are derived, defaults EObject
-#extendsInterface:
+extendsInterface: era.foss.model.core.era.IERAObject
 
 # implementsInterface: interface from which model elements are derived
 #implementsInterface:
@@ -67,7 +67,7 @@ modelDirectory: /era.foss.model.core/src
 modelPluginId: era.foss.model.core
 
 # editPluginClass: Bundle  Activator class for the model plug-in
-modelPluginClass: era.foss.model.core.plugin.Activator
+modelPluginClass: era.foss.model.core.plugin.ModelActivator
 
 # editDirectory: where to generate code for the edit plugin 
 editDirectory: /era.foss.model.edit/src
@@ -76,7 +76,7 @@ editDirectory: /era.foss.model.edit/src
 editPluginId: era.foss.model.edit
 
 # editPluginClass: Bundle Activator class for the edit plug-in
-editPluginClass: era.foss.model.edit.plugin.Activator
+editPluginClass: era.foss.model.edit.plugin.EditActivator
 
 # editorDirectory: where to generate code for the edit plugin 
 editorDirectory: /era.foss.model.geneditor/src
@@ -85,4 +85,4 @@ editorDirectory: /era.foss.model.geneditor/src
 editorPluginId: era.foss.model.geneditor
 
 # editorPluginClass: Bundle Activator class for the editor plug-in
-editPluginClass: era.foss.model.geneditor.plugin.Activator
+editorPluginClass: era.foss.model.geneditor.plugin.EditorActivator
