--- a/sys-src/era.foss.model.core/config/extendEcore.properties
+++ b/sys-src/era.foss.model.core/config/extendEcore.properties
@@ -3,61 +3,61 @@
 #
 
 # Children types
-classname.CHILDRENType1: SpecHierachyhildren
-classname.CHILDRENType1: SpecHierachyRootChildren
+#classname.CHILDRENType1: SpecHierachyhildren
+#classname.CHILDRENType1: SpecHierachyRootChildren
 
 # Default value types
-classname.DEFAULTVALUEType: AttributeDefinitionSimpleDefaultValue
-classname.DEFAULTVALUEType1: AttributeDefinitionEnumerationDefaultValue
-classname.DEFAULTVALUEType2: AttributeDefinitionComplexDefaultValue
+#classname.DEFAULTVALUEType: SimpleDefaultValue
+#classname.DEFAULTVALUEType1: EnumerationDefaultValue
+#classname.DEFAULTVALUEType2: ComplexDefaultValue
 
 # Attribute definition types
-classname.DEFINITIONType: AttributeValueXmlDataDefinition
-classname.DEFINITIONType1: AttributeValueFileReferenceDefinition
-classname.DEFINITIONType2: AttributeValueEmbeddedFileDefinition
-classname.DEFINITIONType3: AttributeValueEnumerationDefinition
-classname.DEFINITIONType4: AttributeValueSimpleDefinition
-classname.DEFINITIONType5: AttributeValueEmbeddedDocumentDefinition
+#classname.DEFINITIONType: XmlDataDefinition
+#classname.DEFINITIONType1: FileReferenceDefinition
+#classname.DEFINITIONType2: EmbeddedFileDefinition
+#classname.DEFINITIONType3: EnumerationDefinition
+#classname.DEFINITIONType4: SimpleDefinition
+#classname.DEFINITIONType5: EmbeddedDocumentDefinition
 
 # Relation group types
-classname.RELATIONGROUPSType: SpecGroupRelationGroups
-classname.RELATIONGROUPSType1: AccessPolicyRelationGroups
+#classname.RELATIONGROUPSType: SpecGroupRelationGroups
+#classname.RELATIONGROUPSType1: AccesspolicyRelationGroups
 
 # Spec group types
-classname.SPECGROUPSType: SpecGroups
-classname.SPECGROUPSType1: AccessPolicySpecGroups
+#classname.SPECGROUPSType: SpecGroups
+#classname.SPECGROUPSType1: AccesspolicySpecGroups
 
 # Spec hierachy roots types
-classname.SPECHIERARCHYROOTSType: SpecHierarchyRoots
-classname.SPECHIERARCHYROOTSType1: AccessPolicySpecHierarchyRoots
+#classname.SPECHIERARCHYROOTSType: SpecHierarchyRoots
+#classname.SPECHIERARCHYROOTSType1: AccesspolicySpecHierarchyRoots
 
 # Spec objects types
-classname.SPECOBJECTSType: SpecGroupSpecObjects
-classname.SPECOBJECTSType1: SpecObjects
-classname.SPECOBJECTSType2: AccessPolicySpecObjects
+#classname.SPECOBJECTSType: SpecGroupSpecObjects
+#classname.SPECOBJECTSType1: SpecObjects
+#classname.SPECOBJECTSType2: AccesspolicySpecObjects
 
 # Spec relations types
-classname.SPECRELATIONSType: RelationGroupSpecReleations
-classname.SPECRELATIONSType1: SpecReleations
-classname.SPECRELATIONSType2: AccessPolicySpecReleations
+#classname.SPECRELATIONSType: RelationGroupSpecReleations
+#classname.SPECRELATIONSType1: SpecReleations
+#classname.SPECRELATIONSType2: AccesspolicySpecReleations
 
 # Spec types types
-classname.SPECTYPESType: SpecTypes
-classname.SPECTYPESType1: AccessPolicySpecTypes
+#classname.SPECTYPESType: SpecTypes
+#classname.SPECTYPESType1: AccesspolicySpecTypes
 
 # Type types
-classname.TYPEType: SpecGroupType
-classname.TYPEType1: SpecHierarchyRootType
-classname.TYPEType2: AttributeDefinitionEnumerationType
-classname.TYPEType3: AttributeDefinitionSimpleType
-classname.TYPEType4: SpecObjectType
-classname.TYPEType5: SpecRelationType
-classname.TYPEType6: AttributeDefinitionComplexType
+#classname.TYPEType: SpecGroupType
+#classname.TYPEType1: SpecHierarchyRootType
+#classname.TYPEType2: EnumerationType
+#classname.TYPEType3: SimpleType
+#classname.TYPEType4: SpecObjectType
+#classname.TYPEType5: SpecRelationType
+#classname.TYPEType6: ComplexType
 
 # Values types
-classname.VALUESType: SpecHierarchyRootValues
-classname.VALUESType1: SpecGroupValues
-classname.VALUESType2: SpecObjectValues
-classname.VALUESType3: SpecRelationValues
-classname.VALUESType4: AttributeValueEnumerationValues
+#classname.VALUESType: SpecHierarchyRootValues
+#classname.VALUESType1: SpecGroupValues
+#classname.VALUESType2: SpecObjectValues
+#classname.VALUESType3: SpecRelationValues
+#classname.VALUESType4: EnumerationValues
 
