--- a/sys-src/era.foss.model.core/plugin.xml
+++ b/sys-src/era.foss.model.core/plugin.xml
@@ -9,6 +9,7 @@
 -->
 
 <plugin>
+   <extension-point id="adapter" name="Adapter Factory extension" schema="schema/adapter.exsd"/>
    <extension point="org.eclipse.emf.ecore.generated_package">
       <package
             uri="http://automotive-his.de/schema/rif"
