--- a/sys-src/era.foss.model.rif/config/extendGenModel.properties
+++ b/sys-src/era.foss.model.rif/config/extendGenModel.properties
@@ -52,7 +52,7 @@ modelPackage: era.foss.model
 interfacePackage: model
 
 # implementationPackage: sub package where to place the model implementation
-implementationPackage: internal
+implementationPackage: model.internal
 
 # providerPackage: sub package where to place the edit provider
 providerPackage: edit
