--- a/sys-src/era.internal.build/ant.properties
+++ b/sys-src/era.internal.build/ant.properties
@@ -5,7 +5,7 @@
 #
 
 # List of projects to build
-projects: era.internal.tools, era.foss.model.rif, era.foss.model.rif.edit, era.foss.model.rif.geneditor
+projects: era.internal.tools, era.foos.util, era.foss.model.rif, era.foss.model.rif.edit, era.foss.model.rif.geneditor
 
 # directory where to build the eclipse site
 site: site
