--- a/sys-src/era.foss.model.rif.edit/plugin.xml
+++ b/sys-src/era.foss.model.rif.edit/plugin.xml
@@ -13,7 +13,7 @@
    <extension point="org.eclipse.emf.edit.itemProviderAdapterFactories">
       <factory
             uri="http://automotive-his.de/schema/rif"
-            class="era.foss.model.core.rif.provider.RifItemProviderAdapterFactory"
+            class="era.foss.model.rif.edit.RifItemProviderAdapterFactory"
             supportedTypes=
               "org.eclipse.emf.edit.provider.IEditingDomainItemProvider
                org.eclipse.emf.edit.provider.IStructuredItemContentProvider
