+ Set content type from text/rif to RifContentType as generator creates content type identifier from this string + Created genmodel fitting to new properties

--- a/sys-src/era.foss.model.rif/build.properties
+++ b/sys-src/era.foss.model.rif/build.properties
@@ -1,6 +1,8 @@
 # Eclipse properties
-bin.includes = model/rif.xsd,\
-               model/rif-xhtml.xsd
+bin.includes = plugin.xml,\
+               plugin.properties,\
+               META-INF/,\
+               model/
 src.includes = src/,\
                model/,\
                config/,\
@@ -8,3 +10,7 @@ src.includes = src/,\
                build.properties,\
                .project,\
                .classpath
+source.. = src/
+bin.excludes = model/rif-xhtml.xsd,\
+               model/rif.ecore,\
+               model/rif.xsd
