--- a/sys-src/era.foss.model.rif/config/extendGenModel.properties
+++ b/sys-src/era.foss.model.rif/config/extendGenModel.properties
@@ -7,7 +7,7 @@ complianceLevel: 6.0
 
 
 # contentType: file content type
-contentType: text/rif
+contentType: RifContentType
 
 # fileExtension: file extension for model files
 fileExtension: xml
