--- a/sys-src/era.foss.model.rif.geneditor/plugin.properties
+++ b/sys-src/era.foss.model.rif.geneditor/plugin.properties
@@ -4,7 +4,7 @@
 #
 # $Id$
 
-pluginName = era.foss.model Editor
+pluginName = era.foss.model.rif Editor
 providerName = www.example.org
 
 _UI_RifEditor_menu = &Rif Editor
@@ -40,7 +40,7 @@ _UI_RifModelWizard_description = Create a new Rif model
 _UI_RifEditor_label = Rif Model Editor
 
 _UI_RifEditorFilenameDefaultBase = My
-_UI_RifEditorFilenameExtensions = rif
+_UI_RifEditorFilenameExtensions = xml
 
 _UI_Wizard_label = New
 
