Re-Generated source and plugin.xml files

--- a/sys-src/era.foss.model.rif.edit/plugin.properties
+++ b/sys-src/era.foss.model.rif.edit/plugin.properties
@@ -61,7 +61,7 @@ _UI_RelationGroup_type = Relation Group
 _UI_SpecGroupRelationGroups_type = Spec Group Relation Groups
 _UI_AccessPolicyRelationGroups_type = Access Policy Relation Groups
 _UI_RelationType_type = Relation Type
-_UI_Rif_type = Rif
+_UI_RIF_type = RIF
 _UI_Source_type = Source
 _UI_SpecAttributes_type = Spec Attributes
 _UI_SpecGroup_type = Spec Group
@@ -302,21 +302,21 @@ _UI_SpecGroupRelationGroups_relationGroup_feature = Relation Group
 _UI_AccessPolicyRelationGroups_group_feature = Group
 _UI_AccessPolicyRelationGroups_relationGroupRef_feature = Relation Group Ref
 _UI_RelationType_specTypeRef_feature = Spec Type Ref
-_UI_Rif_author_feature = Author
-_UI_Rif_comment_feature = Comment
-_UI_Rif_countryCode_feature = Country Code
-_UI_Rif_creationTime_feature = Creation Time
-_UI_Rif_identifier_feature = Identifier
-_UI_Rif_sourceToolId_feature = Source Tool Id
-_UI_Rif_title_feature = Title
-_UI_Rif_version_feature = Version
-_UI_Rif_accessPolicies_feature = Access Policies
-_UI_Rif_datatypes_feature = Datatypes
-_UI_Rif_specTypes_feature = Spec Types
-_UI_Rif_specObjects_feature = Spec Objects
-_UI_Rif_specRelations_feature = Spec Relations
-_UI_Rif_specGroups_feature = Spec Groups
-_UI_Rif_specHierarchyRoots_feature = Spec Hierarchy Roots
+_UI_RIF_author_feature = Author
+_UI_RIF_comment_feature = Comment
+_UI_RIF_countryCode_feature = Country Code
+_UI_RIF_creationTime_feature = Creation Time
+_UI_RIF_identifier_feature = Identifier
+_UI_RIF_sourceToolId_feature = Source Tool Id
+_UI_RIF_title_feature = Title
+_UI_RIF_version_feature = Version
+_UI_RIF_accessPolicies_feature = Access Policies
+_UI_RIF_datatypes_feature = Datatypes
+_UI_RIF_specTypes_feature = Spec Types
+_UI_RIF_specObjects_feature = Spec Objects
+_UI_RIF_specRelations_feature = Spec Relations
+_UI_RIF_specGroups_feature = Spec Groups
+_UI_RIF_specHierarchyRoots_feature = Spec Hierarchy Roots
 _UI_Source_specObjectRef_feature = Spec Object Ref
 _UI_SpecAttributes_group_feature = Group
 _UI_SpecAttributes_attributeDefinitionComplex_feature = Attribute Definition Complex
