--- a/sys-src/era.foss.model.rif.geneditor/plugin.properties
+++ b/sys-src/era.foss.model.rif.geneditor/plugin.properties
@@ -30,16 +30,16 @@ _UI_MultiObjectSelected = Selected {0} Objects
 
 _UI_OpenEditorError_label = Open Editor
 
-_UI_Wizard_category = Example EMF Model Creation Wizards
+_UI_Wizard_category = Specifications
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_RifModelWizard_label = Rif Model
-_UI_RifModelWizard_description = Create a new Rif model
+_UI_RifModelWizard_label = Rif Specification
+_UI_RifModelWizard_description = Create a new specification using the Requirement Interchange Format
 
 _UI_RifEditor_label = Rif Model Editor
 
-_UI_RifEditorFilenameDefaultBase = My
+_UI_RifEditorFilenameDefaultBase = Specification
 _UI_RifEditorFilenameExtensions = xml
 
 _UI_Wizard_label = New
