--- a/sys-src/era.foss.model.rif/.settings/org.eclipse.core.resources.prefs
+++ b/sys-src/era.foss.model.rif/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Tue Jun 16 23:46:35 CEST 2009
+#Wed Jul 22 00:34:59 CEST 2009
 eclipse.preferences.version=1
+encoding//model/rif.xsd=UTF8
 encoding/build.properties=US-ASCII
