--- a/sys-src/era.foss.model.rif/build.properties
+++ b/sys-src/era.foss.model.rif/build.properties
@@ -1,16 +1,14 @@
-# Eclipse properties
-bin.includes = plugin.xml,\
-               plugin.properties,\
-               META-INF/,\
-               model/
-src.includes = src/,\
+
+# <copyright>
+# </copyright>
+#
+# $Id$
+
+bin.includes = .,\
                model/,\
-               config/,\
-               build.xml,\
-               build.properties,\
-               .project,\
-               .classpath
+               META-INF/,\
+               plugin.xml,\
+               plugin.properties
+jars.compile.order = .
 source.. = src/
-bin.excludes = model/rif-xhtml.xsd,\
-               model/rif.ecore,\
-               model/rif.xsd
+output.. = bin/
