--- a/sys-src/era.foss.model.rif/plugin.properties
+++ b/sys-src/era.foss.model.rif/plugin.properties
@@ -4,6 +4,7 @@
 #
 # $Id$
 
-pluginName = era.foss.model.core
-providerName = era.foss.model.core
+pluginName = era.foss.model.rif Model
+providerName = www.example.org
+
 _UI_Rif_content_type = Rif File
