ERA-5 extract super classes

--- a/sys-src/era.foss.model.rif/config/extendEcore.properties
+++ b/sys-src/era.foss.model.rif/config/extendEcore.properties
@@ -2,6 +2,54 @@
 # This configuration is used by ExtendEcore tool to create a customized rif model ecore
 #
 
+# substitute configuration
+classname.VALUESType: Values
+classname.TYPEType: Type
+substitute.SpecGroupValues: Values
+substitute.SpecObjectValues: Values
+substitute.SpecRelationValues: Values
+substitute.SpecObjectType: Type
+substitute.SpecHierarchyRootType: Type
+substitute.SpecRelationType: Type
+
+# Supertype configuration
+extractSuperClass.SpecType: Identifiable desc, identifier, lastChange, longName
+extractSuperClass.SpecObject: SpecElementWithUserDefinedAttributes type, desc, identifier, lastChange, longName
+extractSuperClass.DatatypeDefinitionEnumeration: DatatypeDefinition desc, identifier, lastChange, longName
+extractSuperClass.DatatypeDefinitionBoolean: DatatypeDefinitionSimple desc, identifier, lastChange, longName
+extractSuperClass.DatatypeDefinitionDocument: DatatypeDefinitionComplex embedded, desc, identifier, lastChange, longName
+extractSuperClass.AttributeDefinitionSimple: AttributeDefinition desc, identifier, lastChange, longName
+extractSuperClass.AttributeValueSimple: AttributeValue desc, identifier, lastChange, longName
+extractSuperClass.AttributeValueXmlData: AttributeValueComplex desc, identifier, lastChange, longName
+superClass.SpecElementWithUserDefinedAttributes: Identifiable
+superClass.RelationGroup: Identifiable
+superClass.EnumValue: Identifiable
+superClass.SpecHierarchy: Identifiable
+superClass.SpecGroup: SpecElementWithUserDefinedAttributes
+superClass.SpecHierarchyRoot: SpecElementWithUserDefinedAttributes
+superClass.SpecRelation: SpecElementWithUserDefinedAttributes
+superClass.DatatypeDefinition: Identifiable
+superClass.DatatypeDefinitionSimple: DatatypeDefinition
+superClass.DatatypeDefinitionComplex: DatatypeDefinition
+superClass.DatatypeDefinitionInteger: DatatypeDefinition
+superClass.DatatypeDefinitionReal: DatatypeDefinition
+superClass.DatatypeDefinitionString: DatatypeDefinition
+superClass.DatatypeDefinitionDate: DatatypeDefinition
+superClass.DatatypeDefinitionBinaryFile: DatatypeDefinitionComplex
+superClass.DatatypeDefinitionXmlData: DatatypeDefinitionComplex
+superClass.AttributeDefinition: Identifiable
+superClass.AttributeDefinitionEnumeration: AttributeDefinition
+superClass.AttributeDefinitionComplex: AttributeDefinition
+superClass.AttributeValue: Identifiable
+superClass.AttributeValueEnumeration: AttributeValue
+superClass.AttributeValueComplex: AttributeValue
+superClass.AttributeValueFileReference: AttributeValueComplex
+superClass.AttributeValueEmbeddedFile: AttributeValueComplex
+superClass.AttributeValueEmbeddedDocument: AttributeValueComplex
+superClass.AccessPolicy: Identifiable
+ 
+
+
 # Children types
 #classname.CHILDRENType1: SpecHierachyhildren
 #classname.CHILDRENType1: SpecHierachyRootChildren
@@ -55,9 +103,9 @@
 #classname.TYPEType6: ComplexType
 
 # Values types
-#classname.VALUESType: SpecHierarchyRootValues
-#classname.VALUESType1: SpecGroupValues
-#classname.VALUESType2: SpecObjectValues
-#classname.VALUESType3: SpecRelationValues
+# [renamed] classname.VALUESType: SpecHierarchyRootValues
+# [substituted] classname.VALUESType1: SpecGroupValues
+# [substituted] classname.VALUESType2: SpecObjectValues
+# [substituted] classname.VALUESType3: SpecRelationValues
 #classname.VALUESType4: EnumerationValues
 
