ERA-6 Working editor

--- a/sys-src/era.foss.model.rif.geneditor/plugin.properties
+++ b/sys-src/era.foss.model.rif.geneditor/plugin.properties
@@ -40,7 +40,7 @@ _UI_RifModelWizard_description = Create a new specification using the Requiremen
 _UI_RifEditor_label = Rif Model Editor
 
 _UI_RifEditorFilenameDefaultBase = Specification
-_UI_RifEditorFilenameExtensions = xml
+_UI_RifEditorFilenameExtensions = rif
 
 _UI_Wizard_label = New
 
